ver 0.19 (not yet released)
* protocol
  - new commands "addtagid", "cleartagid"
  - "lsinfo" and "readcomments" allowed for remote files
* database
  - upnp: new plugin
* playlist
  - soundcloud: use https instead of http
* archive
  - read tags from songs in an archive
* input
  - alsa: new input plugin
  - smbclient: new input plugin
* filter
  - volume: improved software volume dithering
* new resampler option using libsoxr

ver 0.18.7 (not yet released)
* playlist
  - pls: fix crash after parser error
  - soundcloud: fix build failure with libyajl 2.0.1
* decoder
  - faad: fix memory leak
* daemon: don't initialize supplementary groups when already running
  as the configured user

ver 0.18.6 (2013/12/24)
* input
  - cdio_paranoia: support libcdio-paranoia 0.90
* tags
  - riff: recognize upper-case "ID3" chunk name
* decoder
  - ffmpeg: use relative timestamps
* output
  - openal: fix build failure on Mac OS X
  - osx: fix build failure
* mixer
  - alsa: fix build failure with uClibc
* fix replay gain during cross-fade
* accept files without metadata

ver 0.18.5 (2013/11/23)
* configuration
  - fix crash when db_file is configured without music_directory
  - fix crash on "stats" without db_file/music_directory
* database
  - proxy: auto-reload statistics
  - proxy: provide "db_update" in "stats" response
* input
  - curl: work around stream resume bug (fixed in libcurl 7.32.0)
* decoder
  - fluidsynth: auto-detect by default
* clip 24 bit data from libsamplerate
* fix ia64, mipsel and other little-endian architectures
* fix build failures due to missing includes
* fix build failure with static libmpdclient

ver 0.18.4 (2013/11/13)
* decoder
  - dsdiff: fix byte order bug
* fix build failures due to missing includes
* libc++ compatibility

ver 0.18.3 (2013/11/08)
* fix stuck MPD after song change (0.18.2 regression)

ver 0.18.2 (2013/11/07)
* protocol:
  - "close" flushes the output buffer
* input:
  - cdio_paranoia: add setting "default_byte_order"